# cli-use

./: README.md  __init__.py  pyproject.toml
cli-use/: cli.py  convert.py  create.py  registry.py
cli_use/: batch.py  cache.py  cli.py  completions.py  config.py  convert.py  daemon.py  discovery.py  mcp_client.py  openapi.py  registry.py  skill.py  tui.py
examples/: hello_cli.py  mock_mcp_server.py  real_benchmark.py  token_benchmark.py
tests/: test_smoke.py
